[gd_scene load_steps=6 format=2]

[ext_resource path="res://72x72/25c0.png" type="Texture" id=1]
[ext_resource path="res://72x72/25b6.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Card.tscn" type="PackedScene" id=4]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="25C0" type="Sprite" parent="."]
position = Vector2( 36, 36 )
texture = ExtResource( 1 )

[node name="25B6" type="Sprite" parent="."]
position = Vector2( 190, 36 )
texture = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.053
anchor_top = -0.019
anchor_right = 0.1
anchor_bottom = 0.071
margin_left = 21.728
margin_top = 12.4
margin_right = 9.6
margin_bottom = -2.6
text = "Test"

[node name="EnemyList" type="Node2D" parent="."]
position = Vector2( 512, 150 )

[node name="Card" parent="EnemyList" instance=ExtResource( 4 )]

[node name="Card2" parent="EnemyList" instance=ExtResource( 4 )]

[node name="Card3" parent="EnemyList" instance=ExtResource( 4 )]

[node name="PlayerList" type="Node2D" parent="."]
position = Vector2( 512, 300 )

[node name="Card" parent="PlayerList" instance=ExtResource( 4 )]

[node name="Card2" parent="PlayerList" instance=ExtResource( 4 )]
attack = 4

[node name="Card3" parent="PlayerList" instance=ExtResource( 4 )]

[node name="Card4" parent="PlayerList" instance=ExtResource( 4 )]

[node name="Card5" parent="PlayerList" instance=ExtResource( 4 )]

[node name="Card6" parent="PlayerList" instance=ExtResource( 4 )]

[node name="Card7" parent="PlayerList" instance=ExtResource( 4 )]

[node name="Card8" parent="PlayerList" instance=ExtResource( 4 )]

[node name="Card9" parent="PlayerList" instance=ExtResource( 4 )]

[node name="Card10" parent="PlayerList" instance=ExtResource( 4 )]

[node name="HandList" type="Node2D" parent="."]
position = Vector2( 512, 500 )

[node name="Card" parent="HandList" instance=ExtResource( 4 )]

[node name="Card2" parent="HandList" instance=ExtResource( 4 )]

[connection signal="selection" from="EnemyList/Card" to="." method="_on_Card_selection"]
